feat: Initial scaffold for multi-agent transit assistant
This initial commit establishes the foundational structure for the "Walk With Me" Conversational GPS project. It implements the Supervisor-led Agent-to-Agent (A2A) architecture as defined in the README.md.

Key components in this commit include:

- The core `supervisor.py` orchestrator, responsible for routing, coordination, and compiling final responses.
- A robust, configurable logging system (`utils/logger.py`) for application monitoring and debugging.
- Placeholder files for all specialist agents (`maps.py`, `traffic.py`, `transit.py`, and `weather.py`) that define the system's core capabilities.
- The main application entry point (`main.py`) with a basic conversational loop and in-memory state management.
- Standard project configuration files (`.env.example`, `.gitignore`, `requirements.txt`).

This commit lays the groundwork for integrating real-time APIs and building out the full conversational and notification capabilities.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,19 @@
-# API keys for the Smarter Transit Guidance project
-# Sign up for an API key for each service and add it to a local .env file.
+# ------ API KEYS ------
 
-# OpenAI API key for LLM services
-OPENAI_API_KEY="your_key_here"
+GOOGLE_API_KEY=
+TRANSITLAND_API_KEY=
+OPENWEATHER_API_KEY=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
 
-# Google Routes API key for mapping and routing
-GOOGLE_ROUTES_API_KEY="your_key_here"
+# ------ Logging Information ------
 
-# OpenWeather API key for weather data
-OPENWEATHER_API_KEY="your_key_here"
+LOG_LEVEL=INFO
+# Write logs to file as well as console (optional)
+LOG_FILE=logs/app.log
+LOG_MAX_BYTES=1000000
+LOG_BACKUPS=3
 
-# Transitland API key for real-time transit data
-TRANSITLAND_API_KEY="your_key_here"
+# Turn on routing/agent debug lines
+DEBUG_ROUTING=0
