--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,27 @@
-# ------ API KEYS ------
+# ------ LLM / AI Models ------
+# for langchain_google_genai (Gemini)
+GOOGLE_GENAI_API_KEY=
 
-GOOGLE_API_KEY=
+# for maps/directions/traffic/weather (Google Cloud Platform)
+GOOGLE_CLOUD_API_KEY=
+
+# ------ Data / External Services ------
+# for transit data (e.g. Transitland API)
 TRANSITLAND_API_KEY=
-OPENWEATHER_API_KEY=
+
+# ------ Messaging / Comms ------
+# for Twilio SMS/phone integration
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 
-# ------ Logging Information ------
 
+# ------ Logging / Debug ------
 LOG_LEVEL=INFO
-# Write logs to file as well as console (optional)
+# optional: write logs to file as well as console
 LOG_FILE=logs/app.log
 LOG_MAX_BYTES=1000000
 LOG_BACKUPS=3
 
-# Turn on routing/agent debug lines
+# turn on routing/agent debug lines
 DEBUG_ROUTING=0
