added init.py to utils

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # ------ LLM / AI Models ------
 # for langchain_google_genai (Gemini)
-GOOGLE_GENAI_API_KEY=
+GOOGLE_GENAI_API_KEY=AIzaSyBO3qoBTndk_0SajWMPIDmoj8Am64ivSrU 
 
 # for maps/directions/traffic/weather (Google Cloud Platform)
-GOOGLE_CLOUD_API_KEY=
+GOOGLE_CLOUD_API_KEY=AIzaSyAbXn_VasyffMqhwT-Co0mPUScdofiD4bM
+
 
 # ------ Data / External Services ------
 # for transit data (e.g. Transitland API)
-TRANSITLAND_API_KEY=
+TRANSITLAND_API_KEY=QNhg6FGjavgfVml1n3W4XZxTZut6xi1H
 
 # ------ Messaging / Comms ------
 # for Twilio SMS/phone integration
