Improve onboarding and maintainability: expanded architecture documentation, clarified agent roles and fallbacks, and enhanced code comments (especially in weather specialist and supervisor). No functional changes.
Expanded and clarified ARCHITECTURE.md to detail the LLM supervisor, agent fallbacks, multi-query handling, and file-by-file roles.
Improved comments and docstrings in supervisor.py and weather.py for onboarding clarity.
Confirmed that LangSmith/cloud tracing is not required; local logging and explicit agent routing are sufficient for debugging and production.
No breaking changes; all updates are for documentation and developer experience.

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,23 @@ GOOGLE_CLOUD_API_KEY=
 # ------ Data / External Services ------
 TRANSITLAND_API_KEY=
 
+# ------ Twilio WhatsApp Integration ------
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_WHATSAPP_NUMBER=
+
 # ------ Logging / Debug ------
 LOG_LEVEL=INFO
 LOG_FILE=logs/app.log
 LOG_MAX_BYTES=1000000
 LOG_BACKUPS=3
+
+# ------ API Runtime (optional overrides) ------
+API_HOST=0.0.0.0
+API_PORT=8000
+
+# Notes:
+# - GOOGLE_GENAI_API_KEY required for LLM-driven classification/response quality.
+# - GOOGLE_CLOUD_API_KEY required for live weather/geocoding (otherwise fallback messaging).
+# - TRANSITLAND_API_KEY optional until real transit integration added.
+# - Twilio vars only needed if using WhatsApp webhook.
