--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - GOOGLE_GENAI_API_KEY=${GOOGLE_GENAI_API_KEY}
       - GOOGLE_CLOUD_API_KEY=${GOOGLE_CLOUD_API_KEY}
       - TRANSITLAND_API_KEY=${TRANSITLAND_API_KEY}
+      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
+      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
+      - TWILIO_WHATSAPP_NUMBER=${TWILIO_WHATSAPP_NUMBER}
       - LOG_LEVEL=${LOG_LEVEL}
     volumes:
       - ./logs:/app/logs  # Mount logs directory
