env example update

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ API_HOST=0.0.0.0
 API_PORT=8000
 
 # Notes:
-# - GOOGLE_GENAI_API_KEY required for LLM-driven classification/response quality.
-# - GOOGLE_CLOUD_API_KEY required for live weather/geocoding (otherwise fallback messaging).
-# - TRANSITLAND_API_KEY optional until real transit integration added.
-# - Twilio vars only needed if using WhatsApp webhook.
+# - GOOGLE_GENAI_API_KEY (Gemini) is what Vaya uses. You can switch LLMs but will have to update code accordingly.
+# - GOOGLE_CLOUD_API_KEY is required for core features (weather, maps, geocoding, etc.). Removing or replacing it would require significant code changes.
+# - TRANSITLAND_API_KEY is optional until real transit integration is added.
+# - Twilio variables are only needed if using WhatsApp webhook.
