--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ LOG_FILE=logs/app.log
 LOG_MAX_BYTES=1000000
 LOG_BACKUPS=3
 
+# Enable deterministic offline test mode (skips LLM + external calls)
+TEST_MODE=0
+
 # ------ API Runtime (optional overrides) ------
 API_HOST=0.0.0.0
 API_PORT=8000
@@ -28,3 +31,5 @@ API_PORT=8000
 # - GOOGLE_CLOUD_API_KEY is required for core features (weather, maps, geocoding, etc.). Removing or replacing it would require significant code changes.
 # - TRANSITLAND_API_KEY is optional until real transit integration is added.
 # - Twilio variables are only needed if using WhatsApp webhook.
+# - Set TEST_MODE=1 locally to run without real API keys (stub outputs) or for CI.
+# - docker-compose now uses env_file (.env); copy this file to .env and fill values.
