--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 
 # ------ LLM / AI Models ------
-GOOGLE_GENAI_API_KEY=
+GEMINI_API_KEY=
 
 # ------ Google Cloud (Maps/Routes/Places/Geocoding/Weather) ------
-GOOGLE_CLOUD_API_KEY=
+GOOGLE_API_KEY=
 
 # ------ Data / External Services ------
 TRANSITLAND_API_KEY=
@@ -27,8 +27,8 @@ API_HOST=0.0.0.0
 API_PORT=8000
 
 # Notes:
-# - GOOGLE_GENAI_API_KEY (Gemini) is what Vaya uses. You can switch LLMs but will have to update code accordingly.
-# - GOOGLE_CLOUD_API_KEY is required for core features (weather, maps, geocoding, etc.). Removing or replacing it would require significant code changes.
+# - GEMINI_API_KEY (Gemini) is what Vaya uses for the LLM. You can switch LLMs but will have to update code accordingly.
+# - GOOGLE_API_KEY is required for core features (weather, maps, geocoding, etc.). Removing or replacing it would require significant code changes.
 # - TRANSITLAND_API_KEY is optional until real transit integration is added.
 # - Twilio variables are only needed if using WhatsApp webhook.
 # - Set TEST_MODE=1 locally to run without real API keys (stub outputs) or for CI.
