--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,81 @@
-# Ignore local environment files that contain secrets
+# Environment and secrets
 .env
+.env.local
+.env.*.local
+*.key
+*.pem
+*.cert
+*.secret
+*.token
+config.local.*
+secrets.*
+credentials.*
+auth.json
 
-# Ignore generated files and directories
-venv/
+# Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Ignore system files
-.DS_Store
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+
+# IDEs
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Logs
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs and data
 logs/
 *.log
+data/*.db
+data/*.sqlite
+data/*.sqlite3
+data/conversation_memory.json
+data/*.json
+data/cache/
+data/temp/
+data/sessions/
+data/uploads/
 
-# Keep .env.example
-# The file below is intentionally not ignored
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+
+# Docker (if needed later)
+.dockerignore
+
+# Keep examples
 !.env.example
