added transit + refactor
+refactored to full a2a multiagent system
+added transit and directions (mostly works if simple, customization not implemented yet)
+added loggers for api/llm token/cost

--- a/.gitignore
+++ b/.gitignore
@@ -56,18 +56,12 @@ ENV/
 ehthumbs.db
 Thumbs.db
 
+
 # Logs and data
 logs/
 *.log
-data/*.db
-data/*.sqlite
-data/*.sqlite3
-data/conversation_memory.json
-data/*.json
-data/cache/
-data/temp/
-data/sessions/
-data/uploads/
+data/*
+!data/.gitkeep
 
 # Testing
 .coverage
